--- a/index.html
+++ b/index.html
@@ -391,7 +391,14 @@
         </div>
         <div class="card-body">
             <div class="filters">
-                <!-- Filtros aqui -->
+                <!-- Adicionar o filtro de colunas aqui -->
+                <div class="form-group">
+                    <label class="form-label">Colunas</label>
+                    <select id="filtroColunas" multiple>
+                        <!-- As opções serão preenchidas dinamicamente via JavaScript -->
+                    </select>
+                </div>
+                <!-- Outros filtros aqui -->
             </div>
             <table id="tabelaRelatorio">
                 <thead>
