--- a/index.html
+++ b/index.html
@@ -314,14 +314,14 @@
                 </div>
                 <div class="card-body">
                     <div class="filters">
-                        <div class="form-group">
-                            <label class="form-label">Data Inicial</label>
-                            <input type="text" id="filtroDataInicial" class="form-input" placeholder="DD/MM/AAAA" maxlength="10" oninput="formatarDataInput(this)">
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label">Data Final</label>
-                            <input type="text" id="filtroDataFinal" class="form-input" placeholder="DD/MM/AAAA" maxlength="10" oninput="formatarDataInput(this)">
-                        </div>
+                      <div class="form-group">
+    <label class="form-label">Data Inicial</label>
+    <input type="text" id="dataInicial" class="form-input" placeholder="DD/MM/AAAA" maxlength="10" oninput="formatarDataInput(this)">
+</div>
+<div class="form-group">
+    <label class="form-label">Data Final</label>
+    <input type="text" id="dataFinal" class="form-input" placeholder="DD/MM/AAAA" maxlength="10" oninput="formatarDataInput(this)">
+</div>
                         <div class="form-group">
                             <label class="form-label">Vendedor</label>
                             <select id="filtroVendedorVendas" class="form-select" multiple>
